--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ along with MasterPasswordJS.  If not, see <http://www.gnu.org/licenses/>.
                 <div class="form-group">
                     <label for="name" class="col-sm-4 control-label">Name</label>
                     <div class="col-sm-6">
-                        <input id="name" class="form-control" name="name" type="text">
+                        <input id="name" class="form-control" name="name" type="text" autocomplete="off" value="">
                     </div>
                 </div>
                 <div class="form-group">
@@ -66,7 +66,7 @@ along with MasterPasswordJS.  If not, see <http://www.gnu.org/licenses/>.
                     <div class="form-group">
                         <label for="sitename" class="col-sm-4 control-label">Site name</label>
                         <div class="col-sm-6">
-                            <input id="sitename" class="form-control" name="sitename" type="text"></div>
+                            <input id="sitename" class="form-control" name="sitename" type="text" autocomplete="off" value=""></div>
                     </div>
                     <div class="form-group">
                         <label for="counter" class="col-sm-4 control-label">Counter</label>
@@ -88,9 +88,21 @@ along with MasterPasswordJS.  If not, see <http://www.gnu.org/licenses/>.
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="sitepw" class="col-sm-4 control-label">Site password</label>
+                        <label for="sitepw" class="col-sm-4 control-label">Site password v1</label>
                         <div class="col-sm-6">
-                            <input type="text" class="form-control" id="sitepw" name="sitepw" readonly="readonly">
+                            <input type="text" class="form-control" id="sitepw" name="sitepw" readonly="readonly" autocomplete="off" value="">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="sitepw2" class="col-sm-4 control-label">Site password v2</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" id="sitepw2" name="sitepw2" readonly="readonly" autocomplete="off" value="">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="sitepw3" class="col-sm-4 control-label">Site password v3</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" id="sitepw3" name="sitepw3" readonly="readonly" autocomplete="off" value="">
                         </div>
                     </div>
                     <div class="form-group">
