--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@ along with MasterPasswordJS.  If not, see <http://www.gnu.org/licenses/>.
         <!-- bootstrap-touchspin -->
         <link href="bootstrap-touchspin/jquery.bootstrap-touchspin.min.css" rel="stylesheet">
 
+        <style type="text/css">
+            #password-gen {
+                display: none;
+            }
+
+            #generating {
+                display: none;
+            }
+        </style>
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -43,24 +53,32 @@ along with MasterPasswordJS.  If not, see <http://www.gnu.org/licenses/>.
         <div class="container">
             <h1 class="col-sm-offset-2">MasterPasswordJS</h1>
             <div class="form-horizontal">
-                <div class="form-group">
-                    <label for="name" class="col-sm-4 control-label">Name</label>
-                    <div class="col-sm-6">
-                        <input id="name" class="form-control" name="name" type="text" autocomplete="off" value="">
+                <div id="login-form">
+                    <div class="form-group">
+                        <label for="name" class="col-sm-4 control-label">Name</label>
+                        <div class="col-sm-6">
+                            <input id="name" class="form-control" name="name" type="text" autocomplete="off" value="">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="pw" class="col-sm-4 control-label">Masterpassword</label>
+                        <div class="col-sm-6">
+                            <input id="pw" class="form-control" name="pw" type="password">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-4 col-sm-6">
+                            <div id="login" class="btn btn-primary">Login</div>
+                        </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="pw" class="col-sm-4 control-label">Masterpassword</label>
-                    <div class="col-sm-6">
-                        <input id="pw" class="form-control" name="pw" type="password">
+                <div id="generating" class="col-sm-offset-2 col-sm-8">
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                            Generating keys...
+                        </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-4 col-sm-6">
-                        <div id="login" class="btn btn-primary">Login</div>
-                    </div>
-                </div>
-
                 <fieldset id="password-gen" disabled>
                     <div class="form-group">
                         <label for="sitename" class="col-sm-4 control-label">Site name</label>
@@ -122,7 +140,7 @@ along with MasterPasswordJS.  If not, see <http://www.gnu.org/licenses/>.
         <script>
             $("input[name='counter']").TouchSpin({
                 min: 1,
-                step: 1,
+                step: 1
             });
         </script>
     </body>
