inital PWA support

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@ along with MasterPasswordJS.  If not, see <http://www.gnu.org/licenses/>.
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="manifest" href="manifest.json">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- needed for Bootstrap -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#7e7e7e"/>
         <title>MasterPasswordJS</title>
 
         <script src="sha256.js"></script>
