--- a/index.html
+++ b/index.html
@@ -56,23 +56,25 @@ along with MasterPasswordJS.  If not, see <http://www.gnu.org/licenses/>.
             <h1 class="col-sm-offset-2">MasterPasswordJS</h1>
             <div class="form-horizontal">
                 <div id="login-form">
-                    <div class="form-group">
-                        <label for="name" class="col-sm-4 control-label">Name</label>
-                        <div class="col-sm-6">
-                            <input id="name" class="form-control" name="name" type="text" autocomplete="off" value="">
+                    <form action="" id="login-form-form">
+                        <div class="form-group">
+                            <label for="name" class="col-sm-4 control-label">Name</label>
+                            <div class="col-sm-6">
+                                <input id="name" class="form-control" name="name" type="text" autocomplete="off" value="">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="pw" class="col-sm-4 control-label">Masterpassword</label>
-                        <div class="col-sm-6">
-                            <input id="pw" class="form-control" name="pw" type="password">
+                        <div class="form-group">
+                            <label for="pw" class="col-sm-4 control-label">Masterpassword</label>
+                            <div class="col-sm-6">
+                                <input id="pw" class="form-control" name="pw" type="password">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-offset-4 col-sm-6">
-                            <div id="login" class="btn btn-primary">Login</div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-4 col-sm-6">
+                                <button type="submit" class="btn btn-primary">Login</button>
+                            </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
                 <div id="generating" class="col-sm-offset-2 col-sm-8">
                     <div class="progress">
