added option for pins with 6 digits

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ along with MasterPasswordJS.  If not, see <http://www.gnu.org/licenses/>.
                         <div class="col-sm-6">
                             <select id="pwtype" class="form-control" name="pwtype">
                                 <option value="pin">Pin</option>
+                                <option value="pin6">Pin6</option>
                                 <option value="short">Short</option>
                                 <option value="basic">Basic</option>
                                 <option value="medium">Medium</option>
